add login/signup feature and all phone page

--- a/src/main/resources/static/css/style2.css
+++ b/src/main/resources/static/css/style2.css
@@ -796,7 +796,7 @@ em.item_price {
     font-family: 'Lato', sans-serif;
 }
 ul.cate,.price-head,.color-top{
-    padding: 2em 0;
+    padding: 13px 0;
 }
 .product-head {
     padding: 2em 0 0;
