--- a/src/main/resources/templates/single.html
+++ b/src/main/resources/templates/single.html
@@ -54,7 +54,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="header-right1 ">
 					<ul>
 		
-						<li><i class="glyphicon glyphicon-log-in" ></i><a href="login.html">Login</a></li>
+						<li><i class="glyphicon glyphicon-log-in" ></i><a href="Login.html">Login</a></li>
 						<li><i class="glyphicon glyphicon-book" ></i><a href="register.html">Register</a></li>
 					</ul>
 				</div>
