--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" >
 <head>
 	<title>Home Page</title>
 	<!-- for-mobile-apps -->
@@ -12,6 +12,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!-- //for-mobile-apps -->
 	<link th:href="@{/css/bootstrap.css}" rel="stylesheet" type="text/css" media="all" />
 	<link th:href="@{/css/style2.css}" rel="stylesheet" type="text/css" media="all" />
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+		  integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 	<!-- js -->
 	<script th:src="@{/js/jquery.min.js}"></script>
 	<!-- //js -->
@@ -35,45 +37,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <body>
 	<!-- header -->
 	<div class="header">
-		<div class="header-grid">
-			<div class="container">
-				<div class="header-left animated wow fadeInLeft" data-wow-delay=".5s">
-					<ul>
-						<li><i class="glyphicon glyphicon-headphones"></i><a href="#">24x7 live support</a></li>
-						<li><i class="glyphicon glyphicon-envelope"></i><a
-								href="mailto:info@example.com">@example.com</a></li>
-						<li><i class="glyphicon glyphicon-earphone"></i>+1234 567 892</li>
-
-					</ul>
-				</div>
-				<div class="header-right animated wow fadeInRight" data-wow-delay=".5s">
-					<div class="header-right1 ">
-						<ul>
-
-							<li><i class="glyphicon glyphicon-log-in"></i><a href="Login.html">Login</a></li>
-							<li><i class="glyphicon glyphicon-book"></i><a href="register.html">Register</a></li>
-						</ul>
-					</div>
-					<div class="header-right2">
-						<div class="cart box_1">
-							<a href="checkout.html">
-								<h3>
-									<div class="total">
-										<span class="simpleCart_total"></span> (<span id="simpleCart_quantity"
-											class="simpleCart_quantity"></span> items)
-									</div>
-									<img src="images/cart.png" alt="" />
-								</h3>
-							</a>
-							<p><a href="javascript:;" class="simpleCart_empty">Empty Cart</a></p>
-							<div class="clearfix"> </div>
-						</div>
-					</div>
-					<div class="clearfix"> </div>
-				</div>
-				<div class="clearfix"> </div>
-			</div>
-		</div>
+		<!-- menu -->
+		<div th:insert="~{Menu.html}"></div>
+		<!-- end menu -->
 		<div class="container">
 			<div class="logo-nav">
 
