--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -1,11 +1,5 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" >
 
 <head>
 	<title>Show All Phone</title>
@@ -47,46 +41,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </head>
 
 <body>
+
 	<!-- header -->
 	<div class="header">
-		<div class="header-grid">
-			<div class="container">
-				<div class="header-left animated wow fadeInLeft" data-wow-delay=".5s">
-					<ul>
-						<li><i class="glyphicon glyphicon-headphones"></i><a href="#">24x7 live support</a></li>
-						<li><i class="glyphicon glyphicon-envelope"></i><a
-								href="mailto:info@example.com">DA3@gmail.com</a></li>
-						<li><i class="glyphicon glyphicon-earphone"></i>+1234 567 892</li>
-
-					</ul>
-				</div>
-				<div class="header-right animated wow fadeInRight" data-wow-delay=".5s">
-					<div class="header-right1 ">
-						<ul>
-
-							<li><i class="glyphicon glyphicon-log-in"></i><a href="Login.html">Login</a></li>
-							<li><i class="glyphicon glyphicon-book"></i><a href="register.html">Register</a></li>
-						</ul>
-					</div>
-					<div class="header-right2">
-						<div class="cart box_1">
-							<a href="checkout.html">
-								<h3>
-									<div class="total">
-										<span class="simpleCart_total"></span> (<span id="simpleCart_quantity"
-											class="simpleCart_quantity"></span> items)</div>
-									<img src="images/cart.png" alt="" />
-								</h3>
-							</a>
-							<p><a href="javascript:;" class="simpleCart_empty">Empty Cart</a></p>
-							<div class="clearfix"> </div>
-						</div>
-					</div>
-					<div class="clearfix"> </div>
-				</div>
-				<div class="clearfix"> </div>
-			</div>
-		</div>
+		<!-- menu -->
+		<div th:insert="~{Menu.html}"></div>
+		<!-- end menu -->
 		<div class="container">
 			<div class="logo-nav">
 
@@ -245,7 +205,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-md-3 product-bottom">
 				<!--categories-->
 				<div class="categories animated wow fadeInUp animated" data-wow-delay=".5s">
-					<h3><a href="/all-phone">Categories</a></h3>
+					<h3><a href="/all-phone" style="text-decoration: none; color: white">Categories</a></h3>
 					<ul class="cate" th:each="category : ${categories}">
 						<li><i class="glyphicon glyphicon-menu-right"></i><a th:href="@{category(id=${category.getId()})}" th:text="${category.getName()}"></a>
 							<span>(15)</span></li>
