--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -40,40 +40,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <body>
 <!-- header -->
 	<div class="header">
-			<div class="header-grid">
-					<div class="container">
-				<div class="header-left animated wow fadeInLeft" data-wow-delay=".5s">
-					<ul>
-					<li><i class="glyphicon glyphicon-headphones"></i><a href="#">24x7 live support</a></li>
-						<li><i class="glyphicon glyphicon-envelope" ></i><a href="mailto:info@example.com">@example.com</a></li>
-						<li><i class="glyphicon glyphicon-earphone" ></i>+1234 567 892</li>
-						
-					</ul>
-				</div>
-				<div class="header-right animated wow fadeInRight" data-wow-delay=".5s">
-				<div class="header-right1 ">
-					<ul>
-		
-						<li><i class="glyphicon glyphicon-log-in" ></i><a href="/login">Login</a></li>
-						<li><i class="glyphicon glyphicon-book" ></i><a href="/signup">Register</a></li>
-					</ul>
-				</div>
-				<div class="header-right2">
-					<div class="cart box_1">
-						<a href="checkout.html">
-							<h3> <div class="total">
-								<span class="simpleCart_total"></span> (<span id="simpleCart_quantity" class="simpleCart_quantity"></span> items)</div>
-								<img src="images/cart.png" alt="" />
-							</h3>
-						</a>
-						<p><a href="javascript:;" class="simpleCart_empty">Empty Cart</a></p>
-						<div class="clearfix"> </div>
-					</div>	
-				</div>
-				<div class="clearfix"> </div>
-				</div>
-				<div class="clearfix"> </div>
-			</div>
+		<!-- menu -->
+		<div th:insert="~{Menu.html}"></div>
+		<!-- end menu -->
 			</div>
 			<div class="container">
 			<div class="logo-nav">
