--- a/src/main/resources/templates/card.html
+++ b/src/main/resources/templates/card.html
@@ -52,7 +52,7 @@
                         </div>
                         <ul class="nav__list">
                             <li class="nav__item">
-                                <a href="./index.html" class="nav__link">Home</a>
+                                <a href="/" class="nav__link">Home</a>
                             </li>
                             <li class="nav__item">
                                 <a href="./index.html#category" class="nav__link">Products</a>
