--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,6 +14,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<link th:href="@{/css/style2.css}" rel="stylesheet" type="text/css" media="all" />
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
 		  integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+	<!-- Font Awesome -->
+	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+	<!-- Roboto Webfont -->
+	<link href='https://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
+
 	<!-- js -->
 	<script th:src="@{/js/jquery.min.js}"></script>
 	<!-- //js -->
@@ -28,7 +33,112 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<script th:src="@{/js/wow.min.js}"></script>
 	<script>
 		new WOW().init();
+		$(document).ready(function(){
+			$('a[href="#search"]').on('click', function(event) {
+				$('#search').addClass('open');
+				$('#search > form > input[type="search"]').focus();
+			});
+			$('#search, #search button.close').on('click keyup', function(event) {
+				if (event.target == this || event.target.className == 'close' || event.keyCode == 27) {
+					$(this).removeClass('open');
+				}
+			});
+		});
 	</script>
+	<style>
+		/* Basic Style */
+
+		.search-form{
+			color: #FC2121;
+			text-decoration: none;
+			/*border: 4px solid #FC2121;*/
+			padding: 10px 15px;
+			line-height: 3;
+			-webkit-transition: all .3s ease;
+			-moz-transition: all .3s ease;
+			-ms-transition: all .3s ease;
+			-o-transition: all .3s ease;
+			transition: all .3s ease;
+		}
+
+		.search-form:hover{
+			color: #FFF;
+			background: #FC2121;
+			-webkit-transition: all .3s ease;
+			-moz-transition: all .3s ease;
+			-ms-transition: all .3s ease;
+			-o-transition: all .3s ease;
+			transition: all .3s ease;
+		}
+
+		/* Search Style */
+		#search {
+			position: fixed;
+			top: 0px;
+			left: 0px;
+			width: 100%;
+			height: 100%;
+			background-color: rgba(0, 0, 0, 0.7);
+			-webkit-transition: all 0.5s ease-in-out;
+			-moz-transition: all 0.5s ease-in-out;
+			-ms-transition: all 0.5s ease-in-out;
+			-o-transition: all 0.5s ease-in-out;
+			transition: all 0.5s ease-in-out;
+			-webkit-transform: translate(0px, -100%) scale(0, 0);
+			-moz-transform: translate(0px, -100%) scale(0, 0);
+			-ms-transform: translate(0px, -100%) scale(0, 0);
+			-o-transform: translate(0px, -100%) scale(0, 0);
+			transform: translate(0px, -100%) scale(0, 0);
+			opacity: 0;
+			display: none;
+		}
+
+		#search.open {
+			-webkit-transform: translate(0px, 0px) scale(1, 1);
+			-moz-transform: translate(0px, 0px) scale(1, 1);
+			-ms-transform: translate(0px, 0px) scale(1, 1);
+			-o-transform: translate(0px, 0px) scale(1, 1);
+			transform: translate(0px, 0px) scale(1, 1);
+			opacity: 1;
+			z-index: 106;
+			display: block;
+		}
+
+		#search input[type="search"] {
+			position: absolute;
+			top: 50%;
+			left: 0;
+			margin-top: -51px;
+			width: 60%;
+			margin-left: 20%;
+			color: rgb(255, 255, 255);
+			background: transparent;
+			border-top: 1px solid rgba(255, 255, 255, .8);
+			border-bottom: 2px solid rgba(255, 255, 255, .5);
+			border-left: 0px solid transparent;
+			border-right: 0px solid transparent;
+			font-size: 40px;
+			font-family: Roboto;
+			font-weight: 300;
+			text-align: center;
+			outline: none;
+			padding: 10px;
+		}
+
+		#search .close {
+			position: fixed;
+			top: 15px;
+			right: 15px;
+			opacity: 1;
+			font-size: 27px;
+			color: #fff;
+		}
+
+		#search .close:hover{
+			color: #FC2121;
+			cursor: pointer;
+		}
+	</style>
 	<!-- //animation-effect -->
 	<link href='//fonts.googleapis.com/css?family=Cabin:400,500,600,700' rel='stylesheet' type='text/css'>
 	<link href='//fonts.googleapis.com/css?family=Lato:400,100,300,700,900' rel='stylesheet' type='text/css'>
@@ -175,6 +285,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 							<li><a href="/all-phone"> All Phones</a></li>
 							<li><a href="contact.html">Contact Us</a></li>
+							<li>
+								<!-- Search Link -->
+								<a class="search-form" href="#search">
+									<i class="fa fa-search"></i> Search
+								</a>
+
+								<!-- Search Form -->
+								<div id="search">
+									<span class="close">X</span>
+									<form role="search" id="searchform" action="/search" method="get">
+										<input value="" name="q" type="search" placeholder="type to search"/>
+									</form>
+								</div>
+
+
+							</li>
 						</ul>
 					</div>
 				</nav>
@@ -193,11 +319,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="banner-grid">
 						<h2>Featured Phone</h2>
 						<div class="wome">
-							<a href="#"><img class="img-responsive" th:src="${featuredProduct.image}" alt="" />
+							<a th:href="@{'/all-phone/' + ${featuredProduct.getId()}}"><img class="img-responsive" th:src="${featuredProduct.image}" alt="" />
 							</a>
 							<div class="women simpleCart_shelfItem">
 								<a href="#"><img src="images/ll.png" alt=""></a>
-								<h6 th:text="${featuredProduct.name}"><a href="single.html"></a></h6>
+								<h6 th:text="${featuredProduct.name}"><a th:href="@{'/all-phone/' + ${featuredProduct.getId()}}"></a></h6>
 								<p class="ba-price"><del>$100.00</del><em class="item_price" th:text="${featuredProduct.price}"></em></p>
 								<a href="#" data-text="Add To Cart" class="but-hover1 item_add">Add To Cart</a>
 							</div>
@@ -295,7 +421,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<img th:src="@{/images/phone_image/Aseri-830-300-830x300.png}" class="" alt="" style="height: 100%; width: 100%">
 		</div>
 		<div class="col-md-7 animated wow fadeInRight" data-wow-delay=".1s">
-			<h1 style="text-align: center;  margin:25px 0px">Newest Phone</h1>
+			<h1 style="text-align: center;  margin:25px 0px">Most Quantity Phone</h1>
 			<div class="col-sm-4 item-grid simpleCart_shelfItem phone-item" th:each="mostQuantityPhone: ${mostQuantityPhones}">
 				<div class="grid-pro">
 
@@ -303,7 +429,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 							<figure>
 
-								<a href="#">
+								<a th:href="@{'all-phone/' + ${mostQuantityPhone.getId()}}">
 									<div class="grid-img">
 										<img th:src="${mostQuantityPhone.image}" class="img-responsive" alt="" style="height: 100%">
 									</div>
@@ -339,7 +465,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="grid-pro">
 					<div class=" grid-product ">
 						<figure>
-							<a href="single.html">
+							<a th:href="@{'all-phone/' + ${newestPhone.getId()}}">
 								<div class="grid-img">
 									<img th:src="${newestPhone.image}" class="img-responsive" alt="">
 								</div>
