--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -16,10 +16,26 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		function hideURLbar() {
 			window.scrollTo(0, 1);
 		}
+
+		$(document).ready(function(){
+			$('a[href="#search"]').on('click', function(event) {
+				$('#search').addClass('open');
+				$('#search > form > input[type="search"]').focus();
+			});
+			$('#search, #search button.close').on('click keyup', function(event) {
+				if (event.target == this || event.target.className == 'close' || event.keyCode == 27) {
+					$(this).removeClass('open');
+				}
+			});
+		});
 	</script>
 	<!-- //for-mobile-apps -->
 	<link th:href="@{/css/bootstrap.css}" rel="stylesheet" type="text/css" media="all" />
 	<link th:href="@{/css/style2.css}" rel="stylesheet" type="text/css" media="all" />
+	<!-- Font Awesome -->
+	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+	<!-- Roboto Webfont -->
+	<link href='https://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
 	<!-- js -->
 	<script th:src="@{/js/jquery.min.js}"></script>
 	<!-- //js -->
@@ -34,10 +50,116 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<script th:src="@{/js/wow.min.js}"></script>
 	<script>
 		new WOW().init();
+		$(document).ready(function(){
+			$('a[href="#search"]').on('click', function(event) {
+				$('#search').addClass('open');
+				$('#search > form > input[type="search"]').focus();
+			});
+			$('#search, #search button.close').on('click keyup', function(event) {
+				if (event.target == this || event.target.className == 'close' || event.keyCode == 27) {
+					$(this).removeClass('open');
+				}
+			});
+		});
 	</script>
 	<!-- //animation-effect -->
 	<link href='//fonts.googleapis.com/css?family=Cabin:400,500,600,700' rel='stylesheet' type='text/css'>
 	<link href='//fonts.googleapis.com/css?family=Lato:400,100,300,700,900' rel='stylesheet' type='text/css'>
+	<style>
+
+		/* Basic Style */
+
+		.search-form{
+			color: #FC2121;
+			text-decoration: none;
+			/*border: 4px solid #FC2121;*/
+			padding: 10px 15px;
+			line-height: 3;
+			-webkit-transition: all .3s ease;
+			-moz-transition: all .3s ease;
+			-ms-transition: all .3s ease;
+			-o-transition: all .3s ease;
+			transition: all .3s ease;
+		}
+
+		.search-form:hover{
+			color: #FFF;
+			background: #FC2121;
+			-webkit-transition: all .3s ease;
+			-moz-transition: all .3s ease;
+			-ms-transition: all .3s ease;
+			-o-transition: all .3s ease;
+			transition: all .3s ease;
+		}
+
+		/* Search Style */
+		#search {
+			position: fixed;
+			top: 0px;
+			left: 0px;
+			width: 100%;
+			height: 100%;
+			background-color: rgba(0, 0, 0, 0.7);
+			-webkit-transition: all 0.5s ease-in-out;
+			-moz-transition: all 0.5s ease-in-out;
+			-ms-transition: all 0.5s ease-in-out;
+			-o-transition: all 0.5s ease-in-out;
+			transition: all 0.5s ease-in-out;
+			-webkit-transform: translate(0px, -100%) scale(0, 0);
+			-moz-transform: translate(0px, -100%) scale(0, 0);
+			-ms-transform: translate(0px, -100%) scale(0, 0);
+			-o-transform: translate(0px, -100%) scale(0, 0);
+			transform: translate(0px, -100%) scale(0, 0);
+			opacity: 0;
+			display: none;
+		}
+
+		#search.open {
+			-webkit-transform: translate(0px, 0px) scale(1, 1);
+			-moz-transform: translate(0px, 0px) scale(1, 1);
+			-ms-transform: translate(0px, 0px) scale(1, 1);
+			-o-transform: translate(0px, 0px) scale(1, 1);
+			transform: translate(0px, 0px) scale(1, 1);
+			opacity: 1;
+			z-index: 106;
+			display: block;
+		}
+
+		#search input[type="search"] {
+			position: absolute;
+			top: 50%;
+			left: 0;
+			margin-top: -51px;
+			width: 60%;
+			margin-left: 20%;
+			color: rgb(255, 255, 255);
+			background: transparent;
+			border-top: 1px solid rgba(255, 255, 255, .8);
+			border-bottom: 2px solid rgba(255, 255, 255, .5);
+			border-left: 0px solid transparent;
+			border-right: 0px solid transparent;
+			font-size: 40px;
+			font-family: Roboto;
+			font-weight: 300;
+			text-align: center;
+			outline: none;
+			padding: 10px;
+		}
+
+		#search .close {
+			position: fixed;
+			top: 15px;
+			right: 15px;
+			opacity: 1;
+			font-size: 27px;
+			color: #fff;
+		}
+
+		#search .close:hover{
+			color: #FC2121;
+			cursor: pointer;
+		}
+	</style>
 </head>
 
 <body>
@@ -182,6 +304,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 							<li><a href="/all-phone"> All Phone</a></li>
 							<li><a href="contact.html">Contact Us</a></li>
+							<li>
+								<!-- Search Link -->
+								<a class="search-form" href="#search">
+									<i class="fa fa-search"></i> Search
+								</a>
+
+								<!-- Search Form -->
+								<div id="search">
+									<span class="close">X</span>
+									<form role="search" id="searchform" action="/search" method="get">
+										<input value="" name="q" type="search" placeholder="type to search"/>
+									</form>
+								</div>
+
+
+							</li>
 						</ul>
 					</div>
 				</nav>
@@ -207,7 +345,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="categories animated wow fadeInUp animated" data-wow-delay=".5s">
 					<h3><a href="/all-phone" style="text-decoration: none; color: white">Categories</a></h3>
 					<ul class="cate" th:each="category : ${categories}">
-						<li><i class="glyphicon glyphicon-menu-right"></i><a th:href="@{category(id=${category.getId()})}" th:text="${category.getName()}"></a>
+						<li><i class="glyphicon glyphicon-menu-right"></i><a th:href="@{/category(id=${category.getId()})}" th:text="${category.getName()}"></a>
 							<span>(15)</span></li>
 					</ul>
 				</div>
@@ -260,15 +398,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<!--//colors-->
 				<div class="sellers animated wow fadeInUp" data-wow-delay=".5s">
 
-					<h3 class="best">BEST SELLERS</h3>
+					<h3 class="best">NEW PHONES</h3>
 					<div class="product-head">
 						<div class="product-go" th:each="newPhone : ${newestPhone}">
 							<div class=" fashion-grid">
-								<a href="single.html"><img class="img-responsive " th:src="${newPhone.getImage()}" alt=""></a>
+								<a th:href="@{'/all-phone/' + ${newPhone.getId()}}"><img class="img-responsive " th:src="${newPhone.getImage()}" alt=""></a>
 
 							</div>
 							<div class=" fashion-grid1">
-								<h9 class="best2"><a href="single.html" th:text="${newPhone.getName()}"> </a></h9>
+								<h9 class="best2"><a th:href="@{'/all-phone/' + ${newPhone.getId()}}" th:text="${newPhone.getName()}"> </a></h9>
 								<p><del th:text="${newPhone.getOldPrice()}"></del><em class="item_price" th:text="${newPhone.getPrice()}"></em></p>
 								<p>The standard chunk of Lorem Ipsum used</p>
 							</div>
@@ -311,7 +449,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="grid-pro d-flex">
 							<div class=" grid-product ">
 								<figure>
-									<a href="single.html">
+									<a th:href="@{'/all-phone/' + ${phone.getId()}}">
 										<div class="grid-img">
 											<img th:src="${phone.getImage()}" class="img-responsive" alt="">
 										</div>
@@ -323,7 +461,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</div>
 							<div class="women">
 <!--								<a href="#"><img th:src="${phone.getImage()}" alt=""></a>-->
-								<h6><a href="single.html" th:text="${phone.getName()}"></a></h6>
+								<h6><a th:href="@{'/all-phone/' + ${phone.getId()}}" th:text="${phone.getName()}"></a></h6>
 								<p><del th:text="${phone.getOldPrice()}"></del><em class="item_price" th:text="${phone.getPrice()}"></em></p>
 								<a href="#" data-text="Add To Cart" class="but-hover1 item_add">Add To Cart</a>
 							</div>
@@ -332,6 +470,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 					<div class="clearfix"></div>
 				</div>
+
+
 			</div>
 
 
