--- a/src/main/resources/templates/Menu.html
+++ b/src/main/resources/templates/Menu.html
@@ -28,16 +28,18 @@
       </div>
       <div class="header-right2">
         <div class="cart box_1">
-          <a href="checkout.html">
+          <a href="/cart">
             <h3>
               <div class="total">
-                <span class="simpleCart_total"></span> (<span id="simpleCart_quantity"
-                                                              class="simpleCart_quantity"></span> items)
+<!--                simpleCart_total                                                    simpleCart_quantity-->
+                <span class="" th:text="${total}"></span> (<span id=""
+                                                              class="" th:text="${size}"></span> items)
               </div>
               <img src="images/cart.png" alt="" />
             </h3>
           </a>
-          <p><a href="javascript:;" class="simpleCart_empty">Empty Cart</a></p>
+<!--          javascript:;-->
+          <p><a href="#" class="simpleCart_empty">Cart</a></p>
           <div class="clearfix"> </div>
         </div>
       </div>
