--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -1,13 +1,7 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
-<title>Classic Style a Ecommerce Online Shopping Category Flat Bootstrap Responsive Website Template | Checkout :: w3layouts</title>
+<title>Checkout</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -18,6 +12,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- //for-mobile-apps -->
 <link th:href="@{/css/bootstrap.css}" rel="stylesheet" type="text/css" media="all" />
 <link th:href="@{/css/style2.css}" rel="stylesheet" type="text/css" media="all" />
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity=
+			"sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 <!-- js -->
 <script th:src="@{/js/jquery.min.js}"></script>
 <!-- //js -->
@@ -32,180 +28,167 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <script th:src="@{/js/wow.min.js}"></script>
 <script>
  new WOW().init();
+ $(document).ready(function(){
+	 $('a[href="#search"]').on('click', function(event) {
+		 $('#search').addClass('open');
+		 $('#search > form > input[type="search"]').focus();
+	 });
+	 $('#search, #search button.close').on('click keyup', function(event) {
+		 if (event.target == this || event.target.className == 'close' || event.keyCode == 27) {
+			 $(this).removeClass('open');
+		 }
+	 });
+ });
 </script>
 <!-- //animation-effect -->
 <link href='//fonts.googleapis.com/css?family=Cabin:400,500,600,700' rel='stylesheet' type='text/css'>
-<link href='//fonts.googleapis.com/css?family=Lato:400,100,300,700,900' rel='stylesheet' type='text/css'></head>
-	
+<link href='//fonts.googleapis.com/css?family=Lato:400,100,300,700,900' rel='stylesheet' type='text/css'>
+	<style>
+
+		/* Basic Style */
+
+		.search-form{
+			color: #FC2121;
+			text-decoration: none;
+			/*border: 4px solid #FC2121;*/
+			padding: 10px 15px;
+			line-height: 3;
+			-webkit-transition: all .3s ease;
+			-moz-transition: all .3s ease;
+			-ms-transition: all .3s ease;
+			-o-transition: all .3s ease;
+			transition: all .3s ease;
+		}
+
+		.search-form:hover{
+			color: #FFF;
+			background: #FC2121;
+			-webkit-transition: all .3s ease;
+			-moz-transition: all .3s ease;
+			-ms-transition: all .3s ease;
+			-o-transition: all .3s ease;
+			transition: all .3s ease;
+		}
+
+		/* Search Style */
+		#search {
+			position: fixed;
+			top: 0px;
+			left: 0px;
+			width: 100%;
+			height: 100%;
+			background-color: rgba(0, 0, 0, 0.7);
+			-webkit-transition: all 0.5s ease-in-out;
+			-moz-transition: all 0.5s ease-in-out;
+			-ms-transition: all 0.5s ease-in-out;
+			-o-transition: all 0.5s ease-in-out;
+			transition: all 0.5s ease-in-out;
+			-webkit-transform: translate(0px, -100%) scale(0, 0);
+			-moz-transform: translate(0px, -100%) scale(0, 0);
+			-ms-transform: translate(0px, -100%) scale(0, 0);
+			-o-transform: translate(0px, -100%) scale(0, 0);
+			transform: translate(0px, -100%) scale(0, 0);
+			opacity: 0;
+			display: none;
+		}
+
+		#search.open {
+			-webkit-transform: translate(0px, 0px) scale(1, 1);
+			-moz-transform: translate(0px, 0px) scale(1, 1);
+			-ms-transform: translate(0px, 0px) scale(1, 1);
+			-o-transform: translate(0px, 0px) scale(1, 1);
+			transform: translate(0px, 0px) scale(1, 1);
+			opacity: 1;
+			z-index: 106;
+			display: block;
+		}
+
+		#search input[type="search"] {
+			position: absolute;
+			top: 50%;
+			left: 0;
+			margin-top: -51px;
+			width: 60%;
+			margin-left: 20%;
+			color: rgb(255, 255, 255);
+			background: transparent;
+			border-top: 1px solid rgba(255, 255, 255, .8);
+			border-bottom: 2px solid rgba(255, 255, 255, .5);
+			border-left: 0px solid transparent;
+			border-right: 0px solid transparent;
+			font-size: 40px;
+			font-family: Roboto;
+			font-weight: 300;
+			text-align: center;
+			outline: none;
+			padding: 10px;
+		}
+
+		#search .close {
+			position: fixed;
+			top: 15px;
+			right: 15px;
+			opacity: 1;
+			font-size: 27px;
+			color: #fff;
+		}
+
+		#search .close:hover{
+			color: #FC2121;
+			cursor: pointer;
+		}
+	</style>
+</head>
+
 <body>
 <!-- header -->
 	<div class="header">
-			<div class="header-grid">
-					<div class="container">
-				<div class="header-left animated wow fadeInLeft" data-wow-delay=".5s">
-					<ul>
-					<li><i class="glyphicon glyphicon-headphones"></i><a href="#">24x7 live support</a></li>
-						<li><i class="glyphicon glyphicon-envelope" ></i><a href="mailto:info@example.com">@example.com</a></li>
-						<li><i class="glyphicon glyphicon-earphone" ></i>+1234 567 892</li>
-						
-					</ul>
-				</div>
-				<div class="header-right animated wow fadeInRight" data-wow-delay=".5s">
-				<div class="header-right1 ">
-					<ul>
-		
-						<li><i class="glyphicon glyphicon-log-in" ></i><a href="Login.html">Login</a></li>
-						<li><i class="glyphicon glyphicon-book" ></i><a href="register.html">Register</a></li>
-					</ul>
-				</div>
-				<div class="header-right2">
-					<div class="cart box_1">
-						<a href="checkout.html">
-							<h3> <div class="total">
-								<span class="simpleCart_total"></span> (<span id="simpleCart_quantity" class="simpleCart_quantity"></span> items)</div>
-								<img src="images/cart.png" alt="" />
-							</h3>
-						</a>
-						<p><a href="javascript:;" class="simpleCart_empty">Empty Cart</a></p>
-						<div class="clearfix"> </div>
-					</div>	
-				</div>
-				<div class="clearfix"> </div>
-				</div>
-				<div class="clearfix"> </div>
-			</div>
-			</div>
+		<div th:insert="~{Menu.html}"></div>
 			<div class="container">
 			<div class="logo-nav">
-				
-					<nav class="navbar navbar-default">
+
+				<nav class="navbar navbar-default">
 					<!-- Brand and toggle get grouped for better mobile display -->
 					<div class="navbar-header nav_2">
-						<button type="button" class="navbar-toggle collapsed navbar-toggle1" data-toggle="collapse" data-target="#bs-megadropdown-tabs">
+						<button type="button" class="navbar-toggle collapsed navbar-toggle1" data-toggle="collapse"
+								data-target="#bs-megadropdown-tabs">
 							<span class="sr-only">Toggle navigation</span>
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						 <div class="navbar-brand logo-nav-left wow fadeInLeft animated" data-wow-delay=".5s">
-							<h1 class="animated wow pulse" data-wow-delay=".5s"><a href="index.html">Classic<span>Style</span></a></h1>
+						<div class="navbar-brand logo-nav-left wow fadeInLeft animated" data-wow-delay=".5s">
+							<h1 class="animated wow pulse" data-wow-delay=".5s"><a
+									href="/">Classic<span>Style</span></a></h1>
 						</div>
 
-					</div> 
+					</div>
 					<div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
 						<ul class="nav navbar-nav">
-							<li ><a href="index.html" class="act">Home</a></li>	
+							<li><a href="/" class="act">Home</a></li>
 							<!-- Mega Menu -->
-							<li class="dropdown">
-								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Women <b class="caret"></b></a>
-								<ul class="dropdown-menu multi">
-									<div class="row">
-										<div class="col-sm-4">
-											<ul class="multi-column-dropdown">
-												<h6>Submenu1</h6>
-												
-												<li><a href="products.html">Accessories</a></li>
-												<li><a href="products.html">Bags</a></li>
-												<li><a href="products.html">Caps & Hats</a></li>
-												<li><a href="products.html">Hoodies & Sweatshirts</a></li>
-										
-											</ul>
-										</div>
-										<div class="col-sm-4">
-											<ul class="multi-column-dropdown">
-												<h6>Submenu2</h6>
-												<li><a href="products.html">Jackets & Coats</a></li>
-												<li><a href="products.html">Jeans</a></li>
-												<li><a href="products.html">Jewellery</a></li>
-												<li><a href="products.html">Jumpers & Cardigans</a></li>
-												<li><a href="products.html">Leather Jackets</a></li>
-												<li><a href="products.html">Long Sleeve T-Shirts</a></li>
-
-											</ul>
-										</div>
-										<div class="col-sm-4">
-											<ul class="multi-column-dropdown">
-												<h6>Submenu3</h6>
-												<li><a href="products.html">Shirts</a></li>
-												<li><a href="products.html">Shoes, Boots & Trainers</a></li>
-												<li><a href="products.html">Sunglasses</a></li>
-												<li><a href="products.html">Sweatpants</a></li>
-												<li><a href="products.html">Swimwear</a></li>
-												<li><a href="products.html">Trousers & Chinos</a></li>
-
-											</ul>
-										</div>
-										<div class="clearfix"></div>
-									</div>
-									<div class="row-top">
-										<div class="col-sm-6 row1">
-											<a href="products.html"><img src="images/me.jpg" alt="" class="img-responsive"></a>
-										</div>
-										<div class=" col-sm-6 row2">
-											<a href="products.html"><img src="images/me1.jpg" alt="" class="img-responsive"></a>
-										</div>
-										<div class="clearfix"></div>
-									</div>
-								</ul>
-							</li>
-							<li class="dropdown">
-								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Men <b class="caret"></b></a>
-								<ul class="dropdown-menu multi multi1">
-									<div class="row">
-										<div class="col-sm-4">
-											<ul class="multi-column-dropdown">
-												<h6>Submenu1</h6>
-												
-												<li><a href="products1.html">Accessories</a></li>
-												<li><a href="products1.html">Bags</a></li>
-												<li><a href="products1.html">Caps & Hats</a></li>
-												<li><a href="products1.html">Hoodies & Sweatshirts</a></li>
-										
-											</ul>
-										</div>
-										<div class="col-sm-4">
-											<ul class="multi-column-dropdown">
-												<h6>Submenu2</h6>
-												<li><a href="products1.html">Jackets & Coats</a></li>
-												<li><a href="products1.html">Jeans</a></li>
-												<li><a href="products1.html">Jewellery</a></li>
-												<li><a href="products1.html">Jumpers & Cardigans</a></li>
-												<li><a href="products1.html">Leather Jackets</a></li>
-												<li><a href="products1.html">Long Sleeve T-Shirts</a></li>
-
-											</ul>
-										</div>
-										<div class="col-sm-4">
-											<ul class="multi-column-dropdown">
-												<h6>Submenu3</h6>
-												<li><a href="products1.html">Shirts</a></li>
-												<li><a href="products1.html">Shoes, Boots & Trainers</a></li>
-												<li><a href="products1.html">Sunglasses</a></li>
-												<li><a href="products1.html">Sweatpants</a></li>
-												<li><a href="products1.html">Swimwear</a></li>
-												<li><a href="products1.html">Trousers & Chinos</a></li>
-
-											</ul>
-										</div>
-										<div class="clearfix"></div>
-									</div>
-									<div class="row-top">
-										<div class="col-sm-6 row1">
-											<a href="products1.html"><img src="images/me2.jpg" alt="" class="img-responsive"></a>
-										</div>
-										<div class=" col-sm-6 row2">
-											<a href="products1.html"><img src="images/me3.jpg" alt="" class="img-responsive"></a>
-										</div>
-										<div class="clearfix"></div>
-									</div>
-								</ul>
-							</li>
-							
-							<li><a href="codes.html"> Codes</a></li>
+							<li class="active"><a href="/cart">Cart</a></li>
+							<li><a href="/all-phone"> All Phone</a></li>
 							<li><a href="contact.html">Contact Us</a></li>
+							<li>
+								<!-- Search Link -->
+								<a class="search-form" href="#search">
+									<i class="fa fa-search"></i> Search
+								</a>
+
+								<!-- Search Form -->
+								<div id="search">
+									<span class="close">X</span>
+									<form role="search" id="searchform" action="/search" method="get">
+										<input value="" name="q" type="search" placeholder="type to search"/>
+									</form>
+								</div>
+
+
+							</li>
 						</ul>
 					</div>
-					</nav>
+				</nav>
 				</div>
 				
 		</div>
@@ -252,101 +235,77 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<th class="t-head head-it ">Item</th>
 			<th class="t-head">Price</th>
 			<th class="t-head">Quantity</th>
-			<th class="t-head">Total</th>
+			<th class="t-head">Delete</th>
 		  </tr>
-		  <tr class="cross">
+		  <tr class="cross" th:each="cart : ${carts}">
 			<td class="ring-in t-data">
-				<a href="single.html" class="at-in">
-					<img src="images/pcc.jpg" class="img-responsive" alt="">
+				<a th:href="@{'/all-phone/' + ${cart.getPhone().getId()}}" class="at-in">
+					<img th:src="*{cart.getPhone().getImage()}" class="img-responsive" alt="" style="width: 100px; height: 120px">
 				</a>
 			<div class="sed">
-				<h5>Sed ut perspiciatis unde</h5>
+				<h5 th:text="*{cart.getPhone().getName()}"></h5>
 			</div>
-				<div class="clearfix"> </div>
-				<div class="close1"> </div>
 			 </td>
-			<td class="t-data">$100.00</td>
+			<td class="t-data" th:text="'$'+ *{cart.getPhone().getPrice()}"></td>
 			<td class="t-data"><div class="quantity"> 
 								<div class="quantity-select">            
-									<div class="entry value-minus">&nbsp;</div>
-										<div class="entry value"><span class="span-1">1</span></div>									
-									<div class="entry value-plus active">&nbsp;</div>
+									<a class="" th:href="@{'cart/delete-cart?id=' + ${cart.getPhone().getId()}}"><button class="btnSub " style="width: 40px; height: 40px"><i class="fas fa-minus"></i></button></a>
+										<div class="entry value"><span class="span-1" th:text="${cart.getQuantity()}"></span></div>
+									<a class="" th:href="@{'cart/add-cart?id=' + ${cart.getPhone().getId()}}"><button class="btnSub" style="width: 40px; height: 40px"><i class="fas fa-plus"></i></button></a>
 								</div>
 							</div>
-			
 			</td>
-			<td class="t-data">$100.00</td>
+			  <td class="glyphicon-align-center"><a th:href="@{'cart/remove-cart?id=' + ${cart.getPhone().getId()}}" class="text-dark">
+				  <button type="button" class="btn btn-danger" style="margin-top: 45px">Delete</button>
+			  </a>
+			  </td>
 			
 		  </tr>
-		  <tr class="cross1">
-		  <td class="t-data ring-in"><a href="single.html" class="at-in"><img src="images/pcc2.jpg" class="img-responsive" alt=""></a>
-			<div class="sed">
-				<h5>Sed ut perspiciatis unde</h5>
-			</div>
-			<div class="clearfix"> </div>
-			<div class="close2"> </div></td>
-			<td class="t-data">$200.00</td>
-			<td class="t-data"><div class="quantity"> 
-								<div class="quantity-select">            
-									<div class="entry value-minus">&nbsp;</div>
-										<div class="entry value"><span class="span-1">1</span></div>									
-									<div class="entry value-plus active">&nbsp;</div>
-								</div>
-							</div>
-							<!--quantity-->
-		
-			</td>
-			<td class="t-data">$200.00</td>
-			
-		  </tr>
-		  <tr class="cross2">
-		  <td class="t-data ring-in"><a href="single.html" class="at-in"><img src="images/pcc1.jpg" class="img-responsive" alt=""></a>
-			<div class="sed">
-				<h5>Sed ut perspiciatis unde</h5>
-			</div>
-			<div class="clearfix"> </div>
-			<div class="close3"> </div></td>
-			<td class="t-data">$150.00</td>
-			<td class="t-data">
-				<div class="quantity"> 
-								<div class="quantity-select">            
-									<div class="entry value-minus">&nbsp;</div>
-										<div class="entry value"><span class="span-1">1</span></div>									
-									<div class="entry value-plus active">&nbsp;</div>
-								</div>
-							</div>
-						
-			</td>
-			<td class="t-data">$150.00</td>
-			
-		  </tr>
+
 	</table>
-				<div class=" cart-total">
+
+			<div class=" cart-total" style="margin-right: 200px">
 			
 			 <h5 class="continue" >Cart Total</h5>
 			 <div class="price-details">
 				 <h3>Price Details</h3>
 				 <span>Total</span>
-				 <span class="total1">6200.00</span>
+				 <span class="total1" th:text="'$'+ ${total}"></span>
 				 <span>Discount</span>
 				 <span class="total1">---</span>
 				 <span>Delivery Charges</span>
-				 <span class="total1">150.00</span>
+				 <span class="total1">$10.00</span>
 				 <div class="clearfix"></div>				 
 			 </div>	
 			 <ul class="total_price">
 			   <li class="last_price"> <h4>TOTAL</h4></li>	
-			   <li class="last_price"><span>6350.00</span></li>
+			   <li class="last_price"><span th:text="'$'+ ${total_money}"></span></li>
 			   <div class="clearfix"> </div>
 			 </ul>
-			
-			 <a href="single.html">Produced By Cart</a>
-			 
+
+				<form action="/checkout" method="post" style="width: 100%; margin-top: 30px">
+					<div class="login-mail">
+						<input type="text" name="phoneNumber" placeholder="Phone Number" required="">
+					</div>
+					<div class="login-mail">
+						<input type="text"  name="address" placeholder="Address" required="">
+					</div>
+					<div class="col-md-6 login-do animated wow fadeInRight" data-wow-delay=".5s">
+						<label class="hvr-sweep-to-top login-sub">
+							<input type="submit" value="Check out">
+						</label>
+					</div>
+				</form>
+
 			</div>
-			
+
+
 		
 		 </div>
+
 		 </div>
+
+
 		 				<!--quantity-->
 			<script>
 			$('.value-plus').on('click', function(){
