--- a/src/main/resources/templates/single.html
+++ b/src/main/resources/templates/single.html
@@ -12,6 +12,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!-- //for-mobile-apps -->
 	<link th:href="@{/css/bootstrap.css}" rel="stylesheet" type="text/css" media="all" />
 	<link th:href="@{/css/style2.css}" rel="stylesheet" type="text/css" media="all" />
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity=
+			"sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 	<!-- js -->
 	<script th:src="@{/js/jquery.min.js}"></script>
 	<!-- //js -->
@@ -41,12 +43,121 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			background-color: #dddddd;
 		}
 	</style>
+	<script>
+		$(document).ready(function(){
+			$('a[href="#search"]').on('click', function(event) {
+				$('#search').addClass('open');
+				$('#search > form > input[type="search"]').focus();
+			});
+			$('#search, #search button.close').on('click keyup', function(event) {
+				if (event.target == this || event.target.className == 'close' || event.keyCode == 27) {
+					$(this).removeClass('open');
+				}
+			});
+		});
+	</script>
 <script>
  new WOW().init();
 </script>
 <!-- //animation-effect -->
 <link href='//fonts.googleapis.com/css?family=Cabin:400,500,600,700' rel='stylesheet' type='text/css'>
-<link href='//fonts.googleapis.com/css?family=Lato:400,100,300,700,900' rel='stylesheet' type='text/css'></head>
+<link href='//fonts.googleapis.com/css?family=Lato:400,100,300,700,900' rel='stylesheet' type='text/css'>
+	<style>
+
+		/* Basic Style */
+
+		.search-form{
+			color: #FC2121;
+			text-decoration: none;
+			/*border: 4px solid #FC2121;*/
+			padding: 10px 15px;
+			line-height: 3;
+			-webkit-transition: all .3s ease;
+			-moz-transition: all .3s ease;
+			-ms-transition: all .3s ease;
+			-o-transition: all .3s ease;
+			transition: all .3s ease;
+		}
+
+		.search-form:hover{
+			color: #FFF;
+			background: #FC2121;
+			-webkit-transition: all .3s ease;
+			-moz-transition: all .3s ease;
+			-ms-transition: all .3s ease;
+			-o-transition: all .3s ease;
+			transition: all .3s ease;
+		}
+
+		/* Search Style */
+		#search {
+			position: fixed;
+			top: 0px;
+			left: 0px;
+			width: 100%;
+			height: 100%;
+			background-color: rgba(0, 0, 0, 0.7);
+			-webkit-transition: all 0.5s ease-in-out;
+			-moz-transition: all 0.5s ease-in-out;
+			-ms-transition: all 0.5s ease-in-out;
+			-o-transition: all 0.5s ease-in-out;
+			transition: all 0.5s ease-in-out;
+			-webkit-transform: translate(0px, -100%) scale(0, 0);
+			-moz-transform: translate(0px, -100%) scale(0, 0);
+			-ms-transform: translate(0px, -100%) scale(0, 0);
+			-o-transform: translate(0px, -100%) scale(0, 0);
+			transform: translate(0px, -100%) scale(0, 0);
+			opacity: 0;
+			display: none;
+		}
+
+		#search.open {
+			-webkit-transform: translate(0px, 0px) scale(1, 1);
+			-moz-transform: translate(0px, 0px) scale(1, 1);
+			-ms-transform: translate(0px, 0px) scale(1, 1);
+			-o-transform: translate(0px, 0px) scale(1, 1);
+			transform: translate(0px, 0px) scale(1, 1);
+			opacity: 1;
+			z-index: 106;
+			display: block;
+		}
+
+		#search input[type="search"] {
+			position: absolute;
+			top: 50%;
+			left: 0;
+			margin-top: -51px;
+			width: 60%;
+			margin-left: 20%;
+			color: rgb(255, 255, 255);
+			background: transparent;
+			border-top: 1px solid rgba(255, 255, 255, .8);
+			border-bottom: 2px solid rgba(255, 255, 255, .5);
+			border-left: 0px solid transparent;
+			border-right: 0px solid transparent;
+			font-size: 40px;
+			font-family: Roboto;
+			font-weight: 300;
+			text-align: center;
+			outline: none;
+			padding: 10px;
+		}
+
+		#search .close {
+			position: fixed;
+			top: 15px;
+			right: 15px;
+			opacity: 1;
+			font-size: 27px;
+			color: #fff;
+		}
+
+		#search .close:hover{
+			color: #FC2121;
+			cursor: pointer;
+		}
+	</style>
+</head>
 	
 <body>
 <!-- header -->
@@ -74,113 +185,25 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<ul class="nav navbar-nav">
 							<li ><a href="/" class="act">Home</a></li>
 							<!-- Mega Menu -->
-							<li class="dropdown">
-								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Women <b class="caret"></b></a>
-								<ul class="dropdown-menu multi">
-									<div class="row">
-										<div class="col-sm-4">
-											<ul class="multi-column-dropdown">
-												<h6>Submenu1</h6>
-												
-												<li><a href="products.html">Accessories</a></li>
-												<li><a href="products.html">Bags</a></li>
-												<li><a href="products.html">Caps & Hats</a></li>
-												<li><a href="products.html">Hoodies & Sweatshirts</a></li>
-										
-											</ul>
-										</div>
-										<div class="col-sm-4">
-											<ul class="multi-column-dropdown">
-												<h6>Submenu2</h6>
-												<li><a href="products.html">Jackets & Coats</a></li>
-												<li><a href="products.html">Jeans</a></li>
-												<li><a href="products.html">Jewellery</a></li>
-												<li><a href="products.html">Jumpers & Cardigans</a></li>
-												<li><a href="products.html">Leather Jackets</a></li>
-												<li><a href="products.html">Long Sleeve T-Shirts</a></li>
-
-											</ul>
-										</div>
-										<div class="col-sm-4">
-											<ul class="multi-column-dropdown">
-												<h6>Submenu3</h6>
-												<li><a href="products.html">Shirts</a></li>
-												<li><a href="products.html">Shoes, Boots & Trainers</a></li>
-												<li><a href="products.html">Sunglasses</a></li>
-												<li><a href="products.html">Sweatpants</a></li>
-												<li><a href="products.html">Swimwear</a></li>
-												<li><a href="products.html">Trousers & Chinos</a></li>
-
-											</ul>
-										</div>
-										<div class="clearfix"></div>
-									</div>
-									<div class="row-top">
-										<div class="col-sm-6 row1">
-											<a href="products.html"><img src="images/me.jpg" alt="" class="img-responsive"></a>
-										</div>
-										<div class=" col-sm-6 row2">
-											<a href="products.html"><img src="images/me1.jpg" alt="" class="img-responsive"></a>
-										</div>
-										<div class="clearfix"></div>
-									</div>
-								</ul>
-							</li>
-							<li class="dropdown">
-								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Men <b class="caret"></b></a>
-								<ul class="dropdown-menu multi multi1">
-									<div class="row">
-										<div class="col-sm-4">
-											<ul class="multi-column-dropdown">
-												<h6>Submenu1</h6>
-												
-												<li><a href="products1.html">Accessories</a></li>
-												<li><a href="products1.html">Bags</a></li>
-												<li><a href="products1.html">Caps & Hats</a></li>
-												<li><a href="products1.html">Hoodies & Sweatshirts</a></li>
-										
-											</ul>
-										</div>
-										<div class="col-sm-4">
-											<ul class="multi-column-dropdown">
-												<h6>Submenu2</h6>
-												<li><a href="products1.html">Jackets & Coats</a></li>
-												<li><a href="products1.html">Jeans</a></li>
-												<li><a href="products1.html">Jewellery</a></li>
-												<li><a href="products1.html">Jumpers & Cardigans</a></li>
-												<li><a href="products1.html">Leather Jackets</a></li>
-												<li><a href="products1.html">Long Sleeve T-Shirts</a></li>
-
-											</ul>
-										</div>
-										<div class="col-sm-4">
-											<ul class="multi-column-dropdown">
-												<h6>Submenu3</h6>
-												<li><a href="products1.html">Shirts</a></li>
-												<li><a href="products1.html">Shoes, Boots & Trainers</a></li>
-												<li><a href="products1.html">Sunglasses</a></li>
-												<li><a href="products1.html">Sweatpants</a></li>
-												<li><a href="products1.html">Swimwear</a></li>
-												<li><a href="products1.html">Trousers & Chinos</a></li>
-
-											</ul>
-										</div>
-										<div class="clearfix"></div>
-									</div>
-									<div class="row-top">
-										<div class="col-sm-6 row1">
-											<a href="products1.html"><img src="images/me2.jpg" alt="" class="img-responsive"></a>
-										</div>
-										<div class=" col-sm-6 row2">
-											<a href="products1.html"><img src="images/me3.jpg" alt="" class="img-responsive"></a>
-										</div>
-										<div class="clearfix"></div>
-									</div>
-								</ul>
-							</li>
-							
+							<li><a href="/all-phone"> All Phones</a></li>
 							<li><a href="codes.html"> Codes</a></li>
 							<li><a href="contact.html">Contact Us</a></li>
+							<li>
+								<!-- Search Link -->
+								<a class="search-form" href="#search">
+									<i class="fa fa-search"></i> Search
+								</a>
+
+								<!-- Search Form -->
+								<div id="search">
+									<span class="close">X</span>
+									<form role="search" id="searchform" action="/search" method="get">
+										<input value="" name="q" type="search" placeholder="type to search"/>
+									</form>
+								</div>
+
+
+							</li>
 						</ul>
 					</div>
 					</nav>
@@ -192,8 +215,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!--banner-->
 <div class="banner-top">
 	<div class="container">
-		<h2 class="animated wow fadeInLeft" data-wow-delay=".5s">Single</h2>
-		<h3 class="animated wow fadeInRight" data-wow-delay=".5s"><a href="/">Home</a><label>/</label>Single</h3>
+		<h2 class="animated wow fadeInLeft" data-wow-delay=".5s" >Single</h2>
+		<h3 class="animated wow fadeInRight" data-wow-delay=".5s"><a href="/">Home</a><label>/ <span th:text="${phone.getName()}"></span></label></h3>
 		<div class="clearfix"> </div>
 	</div>
 </div>
@@ -301,7 +324,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<p class="in-para"> There are many variations of passages of Lorem Ipsum.</p>
 			    <div class="price_single">
 				  <span class="reducedfrom item_price" th:text="${phone.getPrice() + ' $'}"></span>
-				 <a href="#" data-text="Add To Cart" class="but-hover1 item_add">Add To Cart</a>
+				 <a th:href="@{/cart/add-cart(id=${phone.getId()})}" data-text="Add To Cart" class="but-hover1 item_add">Add To Cart</a>
 				 <div class="clearfix"></div>
 				</div>
 				
