add send mail feature

--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -169,7 +169,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<!-- Mega Menu -->
 							<li class="active"><a href="/cart">Cart</a></li>
 							<li><a href="/all-phone"> All Phone</a></li>
-							<li><a href="contact.html">Contact Us</a></li>
+							<li><a href="/contact-me">Contact Us</a></li>
 							<li>
 								<!-- Search Link -->
 								<a class="search-form" href="#search">
@@ -198,7 +198,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="banner-top">
 	<div class="container">
 		<h2 class="animated wow fadeInLeft" data-wow-delay=".5s">Checkout</h2>
-		<h3 class="animated wow fadeInRight" data-wow-delay=".5s"><a href="index.html">Home</a><label>/</label>Checkout</h3>
+		<h3 class="animated wow fadeInRight" data-wow-delay=".5s"><a href="/">Home</a><label>/</label>Checkout</h3>
 		<div class="clearfix"> </div>
 	</div>
 </div>
@@ -348,7 +348,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						non proident Duis aute irure dolor in reprehenderit in voluptate velit esse</p>
 		</div>
 		<div class="col-md-3 footer-top2">
-		<a href="contact.html">Contact Us</a>
+		<a href="/contact-me">Contact Us</a>
 		</div>
 		<div class="clearfix"> </div>
 		</div>
