--- a/src/main/resources/templates/single.html
+++ b/src/main/resources/templates/single.html
@@ -187,7 +187,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<!-- Mega Menu -->
 							<li><a href="/all-phone"> All Phones</a></li>
 							<li><a href="codes.html"> Codes</a></li>
-							<li><a href="contact.html">Contact Us</a></li>
+							<li><a href="/contact-me">Contact Us</a></li>
 							<li>
 								<!-- Search Link -->
 								<a class="search-form" href="#search">
@@ -443,7 +443,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						non proident Duis aute irure dolor in reprehenderit in voluptate velit esse</p>
 		</div>
 		<div class="col-md-3 footer-top2">
-		<a href="contact.html">Contact Us</a>
+		<a href="/contact-me">Contact Us</a>
 		</div>
 		<div class="clearfix"> </div>
 		</div>
