--- a/src/main/resources/templates/Login.html
+++ b/src/main/resources/templates/Login.html
@@ -170,7 +170,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</li>
 							
 							<li><a href="codes.html"> Codes</a></li>
-							<li><a href="contact.html">Contact Us</a></li>
+							<li><a href="/contact-me">Contact Us</a></li>
 						</ul>
 					</div>
 					</nav>
@@ -253,7 +253,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						non proident Duis aute irure dolor in reprehenderit in voluptate velit esse</p>
 		</div>
 		<div class="col-md-3 footer-top2">
-		<a href="contact.html">Contact Us</a>
+		<a href="/contact-me">Contact Us</a>
 		</div>
 		<div class="clearfix"> </div>
 		</div>
