--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -48,8 +48,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="header-right1 ">
 					<ul>
 		
-						<li><i class="glyphicon glyphicon-log-in" ></i><a href="Login.html">Login</a></li>
-						<li><i class="glyphicon glyphicon-book" ></i><a href="register.html">Register</a></li>
+						<li><i class="glyphicon glyphicon-log-in" ></i><a href="/login">Login</a></li>
+						<li><i class="glyphicon glyphicon-book" ></i><a href="/signup">Register</a></li>
 					</ul>
 				</div>
 				<div class="header-right2">
@@ -82,121 +82,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<span class="icon-bar"></span>
 						</button>
 						 <div class="navbar-brand logo-nav-left wow fadeInLeft animated" data-wow-delay=".5s">
-							<h1 class="animated wow pulse" data-wow-delay=".5s"><a href="index.html">Classic<span>Style</span></a></h1>
+							<h1 class="animated wow pulse" data-wow-delay=".5s"><a href="/">Classic<span>Style</span></a></h1>
 						</div>
 
 					</div> 
 					<div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
 						<ul class="nav navbar-nav">
-							<li ><a href="index.html" class="act">Home</a></li>	
+							<li ><a href="/" class="act">Home</a></li>
 							<!-- Mega Menu -->
-							<li class="dropdown">
-								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Women <b class="caret"></b></a>
-								<ul class="dropdown-menu multi">
-									<div class="row">
-										<div class="col-sm-4">
-											<ul class="multi-column-dropdown">
-												<h6>Submenu1</h6>
-												
-												<li><a href="products.html">Accessories</a></li>
-												<li><a href="products.html">Bags</a></li>
-												<li><a href="products.html">Caps & Hats</a></li>
-												<li><a href="products.html">Hoodies & Sweatshirts</a></li>
-										
-											</ul>
-										</div>
-										<div class="col-sm-4">
-											<ul class="multi-column-dropdown">
-												<h6>Submenu2</h6>
-												<li><a href="products.html">Jackets & Coats</a></li>
-												<li><a href="products.html">Jeans</a></li>
-												<li><a href="products.html">Jewellery</a></li>
-												<li><a href="products.html">Jumpers & Cardigans</a></li>
-												<li><a href="products.html">Leather Jackets</a></li>
-												<li><a href="products.html">Long Sleeve T-Shirts</a></li>
-
-											</ul>
-										</div>
-										<div class="col-sm-4">
-											<ul class="multi-column-dropdown">
-												<h6>Submenu3</h6>
-												<li><a href="products.html">Shirts</a></li>
-												<li><a href="products.html">Shoes, Boots & Trainers</a></li>
-												<li><a href="products.html">Sunglasses</a></li>
-												<li><a href="products.html">Sweatpants</a></li>
-												<li><a href="products.html">Swimwear</a></li>
-												<li><a href="products.html">Trousers & Chinos</a></li>
-
-											</ul>
-										</div>
-										<div class="clearfix"></div>
-									</div>
-									<div class="row-top">
-										<div class="col-sm-6 row1">
-											<a href="products.html"><img src="images/me.jpg" alt="" class="img-responsive"></a>
-										</div>
-										<div class=" col-sm-6 row2">
-											<a href="products.html"><img src="images/me1.jpg" alt="" class="img-responsive"></a>
-										</div>
-										<div class="clearfix"></div>
-									</div>
-								</ul>
-							</li>
-							<li class="dropdown">
-								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Men <b class="caret"></b></a>
-								<ul class="dropdown-menu multi multi1">
-									<div class="row">
-										<div class="col-sm-4">
-											<ul class="multi-column-dropdown">
-												<h6>Submenu1</h6>
-												
-												<li><a href="products1.html">Accessories</a></li>
-												<li><a href="products1.html">Bags</a></li>
-												<li><a href="products1.html">Caps & Hats</a></li>
-												<li><a href="products1.html">Hoodies & Sweatshirts</a></li>
-										
-											</ul>
-										</div>
-										<div class="col-sm-4">
-											<ul class="multi-column-dropdown">
-												<h6>Submenu2</h6>
-												<li><a href="products1.html">Jackets & Coats</a></li>
-												<li><a href="products1.html">Jeans</a></li>
-												<li><a href="products1.html">Jewellery</a></li>
-												<li><a href="products1.html">Jumpers & Cardigans</a></li>
-												<li><a href="products1.html">Leather Jackets</a></li>
-												<li><a href="products1.html">Long Sleeve T-Shirts</a></li>
-
-											</ul>
-										</div>
-										<div class="col-sm-4">
-											<ul class="multi-column-dropdown">
-												<h6>Submenu3</h6>
-												<li><a href="products1.html">Shirts</a></li>
-												<li><a href="products1.html">Shoes, Boots & Trainers</a></li>
-												<li><a href="products1.html">Sunglasses</a></li>
-												<li><a href="products1.html">Sweatpants</a></li>
-												<li><a href="products1.html">Swimwear</a></li>
-												<li><a href="products1.html">Trousers & Chinos</a></li>
-
-											</ul>
-										</div>
-										<div class="clearfix"></div>
-									</div>
-									<div class="row-top">
-										<div class="col-sm-6 row1">
-											<a href="products1.html"><img src="images/me2.jpg" alt="" class="img-responsive"></a>
-										</div>
-										<div class=" col-sm-6 row2">
-											<a href="products1.html"><img src="images/me3.jpg" alt="" class="img-responsive"></a>
-										</div>
-										<div class="clearfix"></div>
-									</div>
-								</ul>
-							</li>
-							
 							<li><a href="codes.html"> Codes</a></li>
-							<li class="active"><a href="contact.html">Contact Us</a></li>
+							<li class="active"><a href="/contact-me">Contact Us</a></li>
 						</ul>
 					</div>
 					</nav>
@@ -209,7 +104,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="banner-top">
 	<div class="container">
 		<h2 class="animated wow fadeInLeft" data-wow-delay=".5s">Contact</h2>
-		<h3 class="animated wow fadeInRight" data-wow-delay=".5s"><a href="index.html">Home</a><label>/</label>Contact</h3>
+		<h3 class="animated wow fadeInRight" data-wow-delay=".5s"><a href="/">Home</a><label>/</label>Contact</h3>
 		<div class="clearfix"> </div>
 	</div>
 </div>
@@ -219,38 +114,38 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		
 			
 			<div class="col-md-8 contact-grids1 animated wow fadeInRight" data-wow-delay=".5s">
-				<form>
+				<form th:action="@{/contact-me}" method="post">
 						<div class="contact-form2">
 							<h4>Name</h4>
 							
-								<input type="text" placeholder="" required="">
+								<input name="name" type="text" placeholder="" required="">
 							
 						</div>
 						<div class="contact-form2">
 							<h4>Website</h4>
 							
-								<input type="text" placeholder="" required="">
+								<input name="website" type="text" placeholder="" required="">
 						
 						</div>
 				
 						<div class="contact-form2">
 							<h4>Email</h4>
 						
-								<input type="email" placeholder="" required="">
+								<input name="email" type="email" placeholder="" required="">
 						
 						</div>
 						<div class="contact-form2">
 							<h4>Subject</h4>
 						
-								<input type="text" placeholder="" required="">
+								<input name="subject" type="text" placeholder="" required="">
 						
 						</div>
 					
 			
-				<div class="contact-me ">
+				<div class="contact-me">
 					<h4>Message</h4>
 				
-						<textarea type="text"  placeholder="" required=""> </textarea>
+						<textarea name="message" type="text"  placeholder="" required=""> </textarea>
 						</div>
 						<input type="submit" value="Submit" >
 				</form>
@@ -327,7 +222,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						non proident Duis aute irure dolor in reprehenderit in voluptate velit esse</p>
 		</div>
 		<div class="col-md-3 footer-top2">
-		<a href="contact.html">Contact Us</a>
+		<a href="/contact-me">Contact Us</a>
 		</div>
 		<div class="clearfix"> </div>
 		</div>
