--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -193,7 +193,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<li><a href="/" class="act">Home</a></li>
 							<!-- Mega Menu -->
 							<li class="active"><a href="/all-phone"> All Phones</a></li>
-							<li><a href="contact.html">Contact Us</a></li>
+							<li><a href="/contact-me">Contact Us</a></li>
 							<li>
 								<!-- Search Link -->
 								<a class="search-form" href="#search">
@@ -399,7 +399,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						non proident Duis aute irure dolor in reprehenderit in voluptate velit esse</p>
 				</div>
 				<div class="col-md-3 footer-top2">
-					<a href="contact.html">Contact Us</a>
+					<a href="/contact-me">Contact Us</a>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
